<resources>
    <string name="app_name">petshop</string>
    <string name="welcome">Welcome to Petshop!</string>
    <string name="you_are_signed_in">You are signed in !</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="update">Cập nhật</string>
    <string name="personal_info">THÔNG TIN CÁ NHÂN</string>
    <string name="name">Họ tên</string>
    <string name="input_name">Nhập họ tên</string>
    <string name="phone">Điện thoại</string>
    <string name="input_phone">Nhập điện thoại</string>
    <string name="email">Email</string>
    <string name="input_email">Nhập email</string>
    <string name="dob">Ngày sinh</string>
    <string name="input_dob">Nhập ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>
    <string name="address">Địa chỉ</string>
    <string name="input_address">Nhập địa chỉ</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="sign_in_ask">Vui lòng đăng nhập tài khoản của bạn</string>
    <string name="welcome_back">Chào mừng trở lại !</string>
    <string name="password_not_match">Mật khâu không khớp !</string>
    <string name="create_acc_success">Tạo tài khoản thành công !</string>
    <string name="failed_to_auth">Không thể xác thực !</string>
    <string name="email_sent">Email đã được hồi đáp %s</string>
    <string name="required">%s bắt buộc</string>
    <string name="sign_in_success">Đăng nhập thành công !</string>
    <string name="sign_in_failed">Đăng nhập không thành công !</string>
    <string name="hi">Xin chào, \n%s</string>
    <string name="quitting_edit_profile">Thoát chỉnh sửa hồ sơ</string>
    <string name="quitting_edit_profile_confirm">Bạn muốn thoát chỉnh sửa hồ sơ?</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Huỷ bỏ</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_your_password">Quên mật khẩu?</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="password_retype">Nhập lại mật khẩu</string>
    <string name="already_account">Đã có tài khoản? Đăng nhâp</string>
    <string name="find">Tìm kiếm</string>
    <string name="categories">Phân loại</string>
    <string name="popular">Phổ biến</string>
    <string name="home">Trang chủ</string>
    <string name="Profile">Cá nhân</string>
    <string name="get_started">BẮT ĐẦU</string>
    <string name="total">Tổng</string>
    <string name="money_symbol">$</string>
    <string name="care_tool">DỤNG CỤ CHĂM SÓC</string>
    <string name="dry_seed">THỨC ĂN HẠT KHÔ</string>
    <string name="pet_treats">BÁNH THƯỞNG</string>
    <string name="soft_seed">THỨC ĂN HẠT MỀM</string>
    <string name="toilet_sand">CÁT VỆ SINH</string>
    <string name="description">Thông tin</string>
    <string name="add_cart">Thêm vào giỏ hàng</string>
    <string name="banner_text_1">Tìm hiểu thú cưng của bạn!</string>
    <string name="banner_text_2">TRY NOW !!!</string>
    <string name="email_exist">Tài khoản với email này đã tồn tại.</string>
    <string name="login">Đăng nhập</string>
    <string name="email_changing">Bạn đang sắp đổi email đăng nhập</string>
    <string name="email_changing_text">Thao tác này sẽ cần bạn xác thực lại mật khẩu</string>
    <string name="item_total">Tổng tiền</string>
    <string name="shipping_fee">Phí vận chuyển</string>
    <string name="check_out">THANH TOÁN</string>
    <string name="see_more"><![CDATA[Xem thêm >]]></string>
    <string name="cart">Giỏ Hàng</string>
    <string name="all_product">Tất cả Sản phẩm</string>
    <string name="recommend">Đề xuất</string>
    <string name="gallery">Chọn ảnh</string>
    <string name="detect">Nhận dạng</string>
</resources>